test/compilable/imports/imp2c.d
module imports.imp2c;

void baz() {}
