test/fail_compilation/fail23.d

void main()
{
try{
break;
}catch{
}
}

